--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,28 @@
     margin: 0;
 }
 
+/* scrollbar */
+body::-webkit-scrollbar {
+    width: 2px;
+}
+
+body::-webkit-scrollbar-track {
+
+    background: linear-gradient(287.15deg, #450E4B 0%, #3C0C41 24.48%, rgba(207, 0, 99, 0) 100%), #CF0063;
+
+
+}
+
+body::-webkit-scrollbar-thumb {
+
+    background: #fff;
+    border-radius: 20px;
+    border: none;
+}
 
 /* ============header============ */
 .header {
+
     background: linear-gradient(287.15deg, #450E4B 0%, #3C0C41 24.48%, rgba(207, 0, 99, 0) 100%), #CF0063;
     height: auto;
 }
@@ -17,6 +36,7 @@
     max-width: 1400px;
     margin: 0 auto;
     padding: 40px;
+    transition: 1s ease;
 }
 
 
@@ -24,7 +44,6 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-
 }
 
 .navbar a {
@@ -40,6 +59,26 @@
 .navbar li {
     list-style-type: none;
     margin-right: 50px;
+    transition: 1s ease;
+}
+
+@media screen and (max-width:660px) {
+    .header_navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    .navbar {
+        justify-content: start;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar li {
+        margin-right: 0;
+        margin-top: 20px;
+    }
 }
 
 /* header_hero */
@@ -51,13 +90,11 @@
     flex-wrap: wrap;
     margin: 0 auto;
     max-width: 1600px;
-
 }
 
 .hero_text {
     padding-top: 200px;
-
-
+    transition: 1s ease;
 }
 
 .hero_text h1 {
@@ -65,6 +102,7 @@
     font-size: 100px;
     line-height: 80px;
     color: #FFFFFF;
+    transition: 1s ease;
 }
 
 .hero_text p {
@@ -73,6 +111,7 @@
     line-height: 44px;
     color: #FFFFFF;
     margin-top: 10px;
+    transition: 1s ease;
 }
 
 .btn_1 {
@@ -94,7 +133,7 @@
 .hero_img img {
     width: 100%;
     height: 100%;
-
+    transition: 1s ease;
 }
 
 .arrow {
@@ -108,13 +147,37 @@
     padding-bottom: 30px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 495px) {
     .hero_text h1 {
-        font-size: 65px;
+        font-size: 55px;
     }
 
     .hero_text p {
-        font-size: 35px;
+        font-size: 30px;
+    }
+
+    .hero_text {
+        padding-left: 10px;
+        padding-top: 80px;
+    }
+}
+
+@media screen and (max-width: 840px) {
+    .hero_text {
+        padding-left: 10px;
+        padding-left: 10px;
+    }
+}
+
+@media screen and (max-width: 660px) {
+    .hero_text {
+        padding-top: 80px;
+    }
+}
+
+@media screen and (max-width: 1480px) {
+    .btn_1 {
+        margin-bottom: 20px;
     }
 }
 
@@ -187,10 +250,12 @@
 
 .feature_text {
     padding-right: 200px;
+    transition: 1s ease;
 }
 
 .rev_feature_text {
     padding-left: 150px;
+    transition: 1s ease;
 }
 
 .feature_text h1,
@@ -217,11 +282,12 @@
 
 .feature_content img {
     width: 100%;
-    height: 100%;
+    transition: 1s ease;
 }
 
 .rev_feature_content img {
     width: 100%;
+    transition: 1s ease;
 
 }
 
@@ -258,6 +324,7 @@
 
 .about_content {
     padding-right: 161px;
+    transition: 1s ease;
 }
 
 .about_content:last-child {
@@ -298,6 +365,7 @@
 
 .about_2_content {
     padding-right: 220px;
+    transition: 1s ease;
 }
 
 .about_2_content:last-child {
@@ -333,14 +401,28 @@
 @media screen and (max-width:960px) {
     .about_content {
         padding-right: 10px;
-        padding-top: ;
+
     }
 }
+
 @media screen and (max-width:675px) {
     .about {
         flex-direction: column;
         padding-right: 0;
     }
+
+    .about_content {
+        padding-top: 40px;
+        padding-right: 0;
+    }
+
+}
+
+@media screen and (max-width:350px) {
+    .about_content br {
+        display: none;
+    }
+
 }
 
 @media screen and (max-width:1310px) {
@@ -351,12 +433,17 @@
 
 @media screen and (max-width:960px) {
     .about_2_content {
-        padding-right: 10px;
+        padding-right: 20px;
     }
 }
+
 @media screen and (max-width:675px) {
     .about_2 {
         flex-direction: column;
+    }
+
+    .about_2_content {
+        padding-top: 40px;
         padding-right: 0;
     }
 }
@@ -372,8 +459,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     padding-bottom: 160px;
+}
+
+.htu_content_text {
+    transition: 1s ease;
 }
 
 .htu_content_text p {
@@ -419,10 +509,39 @@
 
 .htu_img_2 img {
     width: 100%;
+    transition: 1s ease;
 }
 
 .htu_img img {
     width: 100%;
+    transition: 1s ease;
+}
+
+@media screen and (max-width:915px) {
+    .htu_content {
+        flex-direction: column;
+        padding-bottom: 90px;
+    }
+
+    .rev {
+        flex-direction: column-reverse;
+    }
+
+    .htu_img,
+    .htu_img_2 {
+        margin-right: 0;
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .htu_content_text {
+        padding-bottom: 20px;
+        text-align: center;
+    }
+
+    .htu_content_text br {
+        display: none;
+    }
 }
 
 /* Slideshow container */
@@ -552,6 +671,7 @@ q {
     background-size: cover;
 }
 
+
 .download_content {
     display: flex;
     justify-content: center;
@@ -608,6 +728,18 @@ q {
     color: #FFFFFF;
 }
 
+@media screen and (max-width:406px) {
+    .download_btn {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .btn_3 {
+        margin-top: 10px;
+    }
+}
+
 /* end download */
 
 /* contact */
@@ -651,7 +783,6 @@ q {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-
 }
 
 .contact_form input[type=submit] {
@@ -680,6 +811,20 @@ q {
 .contact_form input::placeholder {
     color: rgba(28, 28, 28, 1);
     font-size: 16px;
+}
+
+@media screen and (max-width:477px) {
+
+
+    .contact_form input[type=submit] {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .contact_form input[type=text] {
+        width: 100%;
+    }
 }
 
 /* end contact */
@@ -715,6 +860,11 @@ q {
     text-align: center;
     color: #6B6B6B;
     text-decoration: none;
+    transition: 1s ease;
+}
+
+.footer_bar a:hover {
+    color: #fff;
 }
 
 /* end footer */
