--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -647,6 +647,12 @@ q {
     width: 100%;
 }
 
+@media screen and (max-width:620px) {
+    .mySlides br {
+        display: none;
+    }
+}
+
 /* end how to use */
 
 /* bg_image */
